# ComfyUI-Img2DrawingAssistants

./: README.md  __init__.py  drawing_assistant_nodes.py  pyproject.toml  requirements.txt  utils.py
Img2SketchImages/: Img2DrawingAssistantsWorkflow.json
